# ai4ohs-hybrid

./: .ace_state.json  .env.example  .gitignore  .pre-commit-config.yaml  AI4OHS_HYBRID_Structure_Checklist.yaml  README.md  README_draft.md  del-without-extensions.performans.txt  del-without-requirements.performans.txt  extensions.performance.txt  extensions.txt  generate_workspace_structure.py  install-extensions.performans.txt  installed-library.txt  main.py  pyproject.toml  read-first.txt  requirements.performans.txt  requirements.txt  run_ace_fullmode.py  run_ace_pipeline.py  setup.cfg  setup.sh  test_llama_client.py
.github/: copilot-instructions.md
ai4ohs-hybrid-monorepo/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
config/: agent_config.yaml  example.env  learning_memory_schema.json  rag_retriever.yaml  regulation_corpus.yaml  settings.yaml
docs/: API_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  USER_GUIDE.md  agenticai-for-ai4ohs-hybrid-structure.txt  migration_plan.md  perf_stability_quickstart.md
examples/: curl_search.http  example_queries.md  postman_collection.json  python_client.py
governance/: governance_policies.py
knowledge/: README.md
scripts/: bootstrap.ps1  bootstrap.sh  cleanup-temp.ps1  cli.py  demo_cag_engine.py  generate_quarter_dashboard.py  openai.py  ops_dispatcher.py  optimize-services.ps1  optimizing-performans-stabilite.ps1  restore-services-from-snapshot.ps1  run_all_pipelines.py  run_autonomy_cycle.py  run_guarded_llama.py  services-list-export.ps1  stability-diagnostics.ps1  update_mevzuat_numbers.py
(+164 files in other folders)
