[metadata]
name = ai4ohs-hybrid
version = 2025.11.0
description = Dual-Mode OHS Intelligence Engine (RAG + CAG)
author = AI4OHS-HYBRID Team
license = MIT

[options]
packages = find:
python_requires = >=3.10

[mypy]
python_version = 3.10
show_error_codes = True
pretty = True
warn_unused_configs = True
warn_unused_ignores = True
warn_redundant_casts = True
no_implicit_optional = True
ignore_missing_imports = True
allow_redefinition = True

# Optional strict mode can be enabled on demand via: mypy --strict
[mypy-strict]
warn_return_any = True
warn_unreachable = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
disallow_any_generics = True
